--- a/about.html
+++ b/about.html
@@ -8,11 +8,16 @@
   <link rel="stylesheet" media="screen" href="css/about.css">
 </head>
 <body>
+<main id="content">
   <ul class="nav-list">
+    <h1>The International Society for Universal Dialogue</h1>
+    <h2>About Us</h2>
     <li class="nav-item"><a href="index.html">Home</a></li>
     <li class="nav-item"><a href="about.html">About Us</a></li>
     <li class="nav-item"><a href="announce.html">Announcements and Events</a></li>
     <li class="nav-item"><a href="contact.html">Contact</a></li>
   </ul>
+
+</main>
 </body>
 </html>
