--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en" class="nojs">
 <head>
   <title>About Us</title>
-  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport"/>
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
   <link rel="stylesheet" media="screen" href="css/about.css">
