--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <li class="nav-item"><a href="contact.html">Contact</a></li>
   </ul>
   <p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology.</p>
-  <ul>
+  <ul class="bullets">
     <li>What role does philosophical thinking have to play in moving toward a more rational and more humane future?</li>
     <li>What are ethical principles of dialogue?</li>
     <li>How may one understand cultural diversity and universality?</li>
