--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
 <head>
-  <title>About Us</title>
+  <title>The International Society for Universal Dialogue</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport"/>
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
