--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
 <head>
-  <title>About Us</title>
+  <title>The International Society for Universal Dialogue</title>
   <meta charset="utf-8"/>
   <meta name="viewport"/>
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
