--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport"/>
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
-  <link rel="stylesheet" media="screen" href="css/about.css">
+  <link rel="stylesheet" media="screen" href="css/style.css">
 </head>
 <body>
 <main id="content">
