made_small_changes

--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <main id="content">
-  <h2>The International Society for Universal Dialogue</h2>
-    <h3>About Us</h3>
+  <header>The International Society for Universal Dialogue</header>
+    <h2>About Us</h2>
   <ul class="nav-list">
     <li class="nav-item"><a href="index.html">Home</a></li>
     <li class="nav-item"><a href="about.html">About Us</a></li>
