--- a/about.html
+++ b/about.html
@@ -18,12 +18,10 @@
     <li class="nav-item"><a href="contact.html">Contact</a></li>
   </ul>
   <p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology.</p>
-  <ul class="bullets">
-    <li>What role does philosophical thinking have to play in moving toward a more rational and more humane future?</li>
-    <li>What are ethical principles of dialogue?</li>
-    <li>How may one understand cultural diversity and universality?</li>
-    <li>How best to work toward a culture of peace? What is the relationship between the basic liberties of individuals and the collective rights of cultural groups?</li>
-  </ul>
+  <p>What role does philosophical thinking have to play in moving toward a more rational and more humane future?</p>
+  <p>What are ethical principles of dialogue?</p>
+  <p>How may one understand cultural diversity and universality?</p>
+  <p>How best to work toward a culture of peace? What is the relationship between the basic liberties of individuals and the collective rights of cultural groups?</p>
   <h2>Featured Memeber</h2>
   <h3>Pawel Kuczynski: Artistic Videographer of ISUD</h3>
   <p>Pawel Kuczynski is the director and producer of many documentary and fiction films. He received his PhD from the prestigious Polish Films School in Lodz, Poland.
