--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
 <main id="content">
   <h1>The International Society for Universal Dialogue</h1>
-  <ul class="nav-list">
-    <li class="nav-item"><a href="index.html">Home</a></li>
-    <li class="nav-item"><a href="about.html">About Us</a></li>
-    <li class="nav-item"><a href="announce.html">Announcements and Events</a></li>
-    <li class="nav-item"><a href="contact.html">Contact</a></li>
-  </ul>
+  <div id="nav">
+    <ul class="nav-list">
+      <li class="nav-item"><a href="index.html">Home</a></li>
+      <li class="nav-item"><a href="about.html">About Us</a></li>
+      <li class="nav-item"><a href="announce.html">Announcements and Events</a></li>
+      <li class="nav-item"><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
 
 </main>
 </body>
