--- a/announce.html
+++ b/announce.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <main id="content">
+  <img src="/images/ISUD_Logo_color.webp" alt="ISUD_Logo">
   <h1>The International Society for Universal Dialogue</h1>
   <ul class="nav-list">
     <li class="nav-item"><a href="index.html">Home</a></li>
