--- a/announce.html
+++ b/announce.html
@@ -11,13 +11,14 @@
 <main id="content">
   <img src="/images/ISUD_Logo_color.png" alt="ISUD_Logo">
   <h1>The International Society for Universal Dialogue</h1>
-  <ul class="nav-list">
-    <li class="nav-item"><a href="index.html">Home</a></li>
-    <li class="nav-item"><a href="about.html">About Us</a></li>
-    <li class="nav-item"><a href="announce.html">Announcements and Events</a></li>
-    <li class="nav-item"><a href="contact.html">Contact</a></li>
-  </ul>
-
+  <nav>
+    <ul class="nav-list">
+      <li class="nav-item"><a href="index.html">Home</a></li>
+      <li class="nav-item"><a href="about.html">About Us</a></li>
+      <li class="nav-item"><a href="announce.html">Announcements and Events</a></li>
+      <li class="nav-item"><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
 </main>
 </body>
 </html>
