--- a/announce.html
+++ b/announce.html
@@ -11,7 +11,7 @@
 <main id="content">
   <img src="/images/ISUD_Logo_color.png" alt="ISUD_Logo">
   <h1>The International Society for Universal Dialogue</h1>
-  <nav>
+  <nav id="bar">
     <ul class="nav-list">
       <li class="nav-item"><a href="index.html">Home</a></li>
       <li class="nav-item"><a href="about.html">About Us</a></li>
