making info list
Like the original page I created a list with hyperlinks to their other pages

--- a/announce.html
+++ b/announce.html
@@ -20,12 +20,14 @@
     </ul>
   </nav>
   <h3>Links to the latest news, research and past events hosted by the ISUD and its members.</h3>
-  <ul>
-    <li><a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa">How to obtain a visa to enter Peru</a></li>
-    <li><a href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a></li>
-    <li><a href="https://www.worldialogue.org/videos">VIDEOS</a></li>
-    <li><a href="https://www.worldialogue.org/past-events">PAST EVENTS</a></li>
-  </ul>
+  <div>
+    <ul>
+      <li><a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa">How to obtain a visa to enter Peru</a></li>
+      <li><a href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a></li>
+      <li><a href="https://www.worldialogue.org/videos">VIDEOS</a></li>
+      <li><a href="https://www.worldialogue.org/past-events">PAST EVENTS</a></li>
+    </ul>
+</div>
 </main>
 </body>
 </html>
