--- a/announce.html
+++ b/announce.html
@@ -20,7 +20,7 @@
     </ul>
   </nav>
   <h3>Links to the latest news, research and past events hosted by the ISUD and its members.</h3>
-  <div>
+  <div id="infols">
     <ul>
       <li><a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa">How to obtain a visa to enter Peru</a></li>
       <li><a href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a></li>
