adding style to social bar

--- a/announce.html
+++ b/announce.html
@@ -28,6 +28,13 @@
       <li><a href="https://www.worldialogue.org/past-events">PAST EVENTS</a></li>
     </ul>
   </div>
+  <div>
+    <ul>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+    </ul>
+  </div>
 </main>
 </body>
 </html>
