forgot id again

--- a/announce.html
+++ b/announce.html
@@ -28,7 +28,7 @@
       <li><a href="https://www.worldialogue.org/past-events">PAST EVENTS</a></li>
     </ul>
   </div>
-  <div>
+  <div id="social">
     <ul>
       <li><a href=""></a></li>
       <li><a href=""></a></li>
