--- a/announce.html
+++ b/announce.html
@@ -30,9 +30,9 @@
   </div>
   <div id="social">
     <ul>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
+      <li><a href="">test</a></li>
+      <li><a href="">test</a></li>
+      <li><a href="">test</a></li>
     </ul>
   </div>
 </main>
