changed code so I could merge

--- a/announce.html
+++ b/announce.html
@@ -18,7 +18,7 @@
       <li class="nav-item"><a href="announce.html">Announcements and Events</a></li>
       <li class="nav-item"><a href="contact.html">Contact</a></li>
     </ul>
-  </nav>
+  </div>
   <h3>Links to the latest news, research and past events hosted by the ISUD and its members.</h3>
   <div id="infols">
     <ul>
