--- a/announce.html
+++ b/announce.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <main id="content">
-  <img src="../announce_images/ISUD_Logo_color.png" alt="ISUD_Logo">
+  <img src="/announce_images/ISUD_Logo_color.png" alt="ISUD_Logo">
   <h1>The International Society for Universal Dialogue</h1>
   <div id="nav">
     <ul class="nav-list">
