adding social icons

--- a/announce.html
+++ b/announce.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <main id="content">
-  <img src="/announce_img/ISUD_Logo_color.png" alt="ISUD_Logo">
+  <img src="/announce_img/" alt="ISUD_Logo">
   <h1>The International Society for Universal Dialogue</h1>
   <div id="nav">
     <ul class="nav-list">
@@ -30,8 +30,8 @@
   </div>
   <div id="social">
     <ul>
-      <li><a href="">test</a></li>
-      <li><a href="">test</a></li>
+      <li><i class="fa-brands fa-facebook"></i></li>
+      <li><i class="fa-brands fa-instagram"></i></li>
       <li><a href="">test</a></li>
     </ul>
   </div>
