--- a/announce.html
+++ b/announce.html
@@ -6,6 +6,7 @@
   <meta name="viewport"/>
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
   <link rel="stylesheet" media="screen" href="css/announce_style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/fontawesome.min.css">
 </head>
 <body>
 <main id="content">
@@ -32,7 +33,7 @@
     <ul>
       <li><i class="fa-brands fa-facebook"></i></li>
       <li><i class="fa-brands fa-instagram"></i></li>
-      <li><a href="">test</a></li>
+      <li><a><i class="fa-brands fa-google-plus-g"></i></a></li>
     </ul>
   </div>
 </main>
