--- a/announce.html
+++ b/announce.html
@@ -6,11 +6,10 @@
   <meta name="viewport"/>
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
   <link rel="stylesheet" media="screen" href="css/announce_style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/fontawesome.min.css">
 </head>
 <body>
 <main id="content">
-  <img src="/announce_img/" alt="ISUD_Logo">
+  <img src="/announce_img/ISUD_Logo_color.png" alt="ISUD_Logo">
   <h1>The International Society for Universal Dialogue</h1>
   <div id="nav">
     <ul class="nav-list">
@@ -31,9 +30,9 @@
   </div>
   <div id="social">
     <ul>
-      <li><i class="fa-brands fa-facebook"></i></li>
-      <li><i class="fa-brands fa-instagram"></i></li>
-      <li><a><i class="fa-brands fa-google-plus-g"></i></a></li>
+      <li><a href="">test</a></li>
+      <li><a href="">test</a></li>
+      <li><a href="">test</a></li>
     </ul>
   </div>
 </main>
