--- a/announce.html
+++ b/announce.html
@@ -30,7 +30,7 @@
   </div>
   <div id="social">
     <ul>
-      <li><a href="">test</a></li>
+      <li><a href=""><img src="announce_img/Facebook logo.webp" alt="Facebook"></a></li>
       <li><a href="">test</a></li>
       <li><a href="">test</a></li>
     </ul>
