adding code to social nav bar
added logo for each social site and the links to social site

--- a/announce.html
+++ b/announce.html
@@ -30,9 +30,9 @@
   </div>
   <div id="social">
     <ul>
-      <li><a href=""><img src="announce_img/Facebook logo.webp" alt="Facebook"></a></li>
-      <li><a href="">test</a></li>
-      <li><a href="">test</a></li>
+      <li><a href="https://currents.google.com/117167403531518744294/posts"><img src="announce_img/google logo.webp" alt="Google"></a></li>
+      <li><a href="https://www.facebook.com/wix"><img src="announce_img/Facebook logo.webp" alt="Facebook"></a></li>
+      <li><a href="https://www.linkedin.com/company/wix.com/?trk=tabs_biz_home"><img src="announce_img/insta logo.webp" alt="LinkedIn"></a></li>
     </ul>
   </div>
 </main>
