--- a/announce.html
+++ b/announce.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 <main id="content">
-  <img src="announce_img/ISUD_Logo_color.png" alt="ISUD_Logo">
-  <h1>The International Society for Universal Dialogue</h1>
+  <div id="head">
+    <img src="announce_img/ISUD_Logo_color.png" alt="ISUD_Logo">
+    <h1>The International Society for Universal Dialogue</h1>
+  </div>
   <div id="nav">
     <ul class="nav-list">
       <li class="nav-item"><a href="index.html">Home</a></li>
