adding logo with no background

--- a/announce.html
+++ b/announce.html
@@ -10,7 +10,7 @@
 <body>
 <main id="content">
   <div id="head">
-    <img id="logo" src="announce_img/ISUD_Logo_color.png" alt="ISUD_Logo">
+    <img src="announce_img/isud-nobackground.png" alt="ISUD_Logo">
     <h1>The International Society for Universal Dialogue</h1>
   </div>
   <div id="nav">
