--- a/announce.html
+++ b/announce.html
@@ -22,10 +22,11 @@
     </ul>
   </div>
   <h3>Links to the latest news, research and past events hosted by the ISUD and its members.</h3>
-  <a class="setup" href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa">How to obtain a visa to enter Peru</a>
-  <a class="setup" href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a>
-  <a class="setup" href="https://www.worldialogue.org/videos">VIDEOS</a>
-  <a class="setup" href="https://www.worldialogue.org/past-events">PAST EVENTS</a>
+  <div class="setup">
+    <a id="peru" href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa">How to obtain a visa to enter Peru</a>
+    <a id="dialogue" href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a>
+    <a id="video" href="https://www.worldialogue.org/videos">VIDEOS</a>
+    <a id="past" href="https://www.worldialogue.org/past-events">PAST EVENTS</a>
   </div>
   <div id="social">
     <ul>
