test to see if image will be a hyperlink to

--- a/announce.html
+++ b/announce.html
@@ -23,7 +23,7 @@
   </div>
   <h3>Links to the latest news, research and past events hosted by the ISUD and its members.</h3>
   <div class="setup">
-    <a id="peru" href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa">How to obtain a visa to enter Peru</a>
+    <a id="peru" href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="announce_img/black_white_logo.webp" alt="logo"> How to obtain a visa to enter Peru</a>
     <a id="dialogue" href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a>
     <a id="video" href="https://www.worldialogue.org/videos">VIDEOS</a>
     <a id="past" href="https://www.worldialogue.org/past-events">PAST EVENTS</a>
