--- a/contact.html
+++ b/contact.html
@@ -3,22 +3,37 @@
 <head>
   <title>The International Society for Universal Dialogue</title>
   <meta charset="utf-8"/>
-  <meta name="viewport"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
-  <link rel="stylesheet" media="screen" href="css/style.css">
+  <link rel="stylesheet" media="screen" href="css/contact_style.css">
 </head>
 <body>
-<main id="content">
-  <h1>The International Society for Universal Dialogue</h1>
-  <div id="nav">
-    <ul class="nav-list">
-      <li class="nav-item"><a href="index.html">Home</a></li>
-      <li class="nav-item"><a href="about.html">About Us</a></li>
-      <li class="nav-item"><a href="announce.html">Announcements and Events</a></li>
-      <li class="nav-item"><a href="contact.html">Contact</a></li>
-    </ul>
+  <div class="header">
+    <h1>The International Society for Universal Dialogue</h1>
   </div>
-
-</main>
+  <div class="topnav">
+    <a href="index.html">Home Page</a>
+    <a href="about.html">About Us</a>
+    <a href="announce.html">Announcements & Events</a>
+    <a href="contact.html">Contact Us</a>
+  </div>
+  <div class="row">
+    <div class="leftcolumn">
+    <div class="card">
+      <h2>Contact Us</h2>
+      <p> Want to learn more about the inner-workings of our Society, join us, or network? Feel free to leave us a message on the form.</p>
+    </div>
+    <div class="card">
+      <h2>Keep up with us on our Socials</h2>
+      <ul>test</ul>
+      <ul>test</ul>
+    </div>
+    </div>
+    <div class="rightcolumn">
+      <div class="card">
+        <h2>Thank you for your Interest</h2>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
