--- a/announce.html
+++ b/announce.html
@@ -10,7 +10,7 @@
 <body>
 <main id="content">
   <div id="head">
-    <img src="announce_img/ISUD_Logo_color.webp" alt="ISUD_Logo">
+    <a href="index.html"><img src="announce_img/ISUD_Logo_color.webp" alt="ISUD_Logo"></a>
     <h1>The International Society for Universal Dialogue</h1>
   </div>
   <div id="nav">
