only need one class
hyperlinks need only one class

--- a/announce.html
+++ b/announce.html
@@ -23,19 +23,19 @@
   </div>
   <h3>Links to the latest news, research and past events hosted by the ISUD and its members.</h3>
   <div class="setup">
-    <div class="peru">
+    <div class="borders">
       <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="announce_img/black_white_logo.webp" alt="logo"></a>
       <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"> How to obtain a visa to enter Peru</a>
     </div>
-    <div class="dialogue">
+    <div class="borders">
       <a href="https://www.worldialogue.org/d---u-journal"><img src="announce_img/note.webp" alt="Dialogue"></a>
       <a href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a>
     </div>
-    <div class="video">
+    <div class="borders">
       <a href="https://www.worldialogue.org/videos"><img src="announce_img/video.webp" alt="video"></a>
       <a href="https://www.worldialogue.org/videos">VIDEOS</a>
     </div>
-    <div class="past">
+    <div class="borders">
       <a href="https://www.worldialogue.org/past-events"><img src="announce_img/arrow.webp" alt="arrow"></a>
       <a href="https://www.worldialogue.org/past-events">PAST EVENTS</a>
     </div>
