--- a/announce.html
+++ b/announce.html
@@ -23,21 +23,29 @@
   </div>
   <h3>Links to the latest news, research and past events hosted by the ISUD and its members.</h3>
   <div class="setup">
-    <div class="borders" id="peru">
-      <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="announce_img/black_white_logo.webp" alt="logo"></a>
-      <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"> How to obtain a visa to enter Peru</a>
+    <div class="borders">
+      <div id="peru">
+        <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="announce_img/black_white_logo.webp" alt="logo"></a>
+        <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"> How to obtain a visa to enter Peru</a>
+      </div>
     </div>
-    <div class="borders" id="dialogue">
-      <a href="https://www.worldialogue.org/d---u-journal"><img src="announce_img/note.webp" alt="Dialogue"></a>
-      <a href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a>
+    <div class="borders">
+      <div id="dialogue">
+        <a href="https://www.worldialogue.org/d---u-journal"><img src="announce_img/note.webp" alt="Dialogue"></a>
+        <a href="https://www.worldialogue.org/d---u-journal">DIALOGUE and UNIVERSALISM JOURNAL</a>
+      </div>
     </div>
-    <div class="borders" id="video">
-      <a href="https://www.worldialogue.org/videos"><img src="announce_img/video.webp" alt="video"></a>
-      <a href="https://www.worldialogue.org/videos">VIDEOS</a>
+    <div class="borders">
+      <div id="video">
+        <a href="https://www.worldialogue.org/videos"><img src="announce_img/video.webp" alt="video"></a>
+        <a href="https://www.worldialogue.org/videos">VIDEOS</a>
+      </div>
     </div>
-    <div class="borders" id="past">
-      <a href="https://www.worldialogue.org/past-events"><img src="announce_img/arrow.webp" alt="arrow"></a>
-      <a href="https://www.worldialogue.org/past-events">PAST EVENTS</a>
+    <div class="borders">
+      <div id="past">
+        <a href="https://www.worldialogue.org/past-events"><img src="announce_img/arrow.webp" alt="arrow"></a>
+        <a href="https://www.worldialogue.org/past-events">PAST EVENTS</a>
+      </div>
     </div>
   </div>
   <div id="social">
