padding-and-image-additions

--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,15 @@
   <div class="row">
     <div class="leftcolumn">
     <div class="card">
+    <div class="body">
       <h2>Contact Us</h2>
+    </div>
       <p> Want to learn more about the inner-workings of our Society, join us, or network? Feel free to leave us a message on the form.</p>
     </div>
     <div class="card">
-      <h2>Keep up with us on our Socials</h2>
+    <div class="body">
+      <h2>Socials</h2>
+    </div>
       <ul>test</ul>
       <ul>test</ul>
     </div>
@@ -33,17 +37,12 @@
     <div class="rightcolumn">
       <div class="card">
         <form method="get" action="#null" name="contactForm" autocomplete="on" onsubmit="return checkForm()">
-        <h2>Thank you for your Interest</h2>
+        <h1>Contact International Society for Universal Dialogue.</h1>
         <div class="register">
-          <label for="firstname">First Name: *</label>
-          <input type="text" name="first_name" placeholder="Jane" autocomplete="legal-name">
-          <label for="lastname">Last Name: *</label>
-          <input type="text" name="last_name" placeholder="Doe" autocomplete="family-name">
-          <label for="email">Email: *</label>
-          <input type="text" name="email_info" placeholder="Email" autocomplete="email">
-          <label>Organization: </label>
+          <input type="text" name="first_name" placeholder="First Name*" autocomplete="legal-name">
+          <input type="text" name="last_name" placeholder="Last Name*" autocomplete="family-name">
+          <input type="text" name="email_info" placeholder="Email*" autocomplete="email">
           <input type="text" name="organization" placeholder="Organization">
-          <label>Message</label>
           <input type="text" name="message" placeholder="Message">
         </div>
         <div class="check">
