fixed-linked-images

--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
     <div class="body">
       <h2>Socials</h2>
     </div>
-      <ul><a href="https://www.facebook.com/"></a><img src="images/facebookLogo.png" alt="Facebook" width="20%"></ul>
-      <ul><a href="https://www.linkedin.com/"></a><img src="images/linkedInLogo.png" alt="LinkedIn" width="20%"></ul>
-      <ul><a href="https://www.instagram.com/"></a><img src="images/instagramLogo.png" alt="Instagram" width="20%"></ul>
-      <ul><a href="https://twitter.com/"></a><img src="images/twitterLogo.png" alt="Twitter" width="20%"></ul>
-      <ul><a href="https://www.Youtube.com/"></a><img src="images/youtubeLogo.png" alt="YouTube" width="60%"></ul>
+      <ul><a href="https://www.facebook.com/">img src="images/facebookLogo.png" alt="Facebook" width="20%"></a></ul>
+      <ul><a href="https://www.linkedin.com/"><img src="images/linkedInLogo.png" alt="LinkedIn" width="20%"></a></ul>
+      <ul><a href="https://www.instagram.com/"><img src="images/instagramLogo.png" alt="Instagram" width="20%"></a></ul>
+      <ul><a href="https://twitter.com/"><img src="images/twitterLogo.png" alt="Twitter" width="20%"></a></ul>
+      <ul><a href="https://www.Youtube.com/"><img src="images/youtubeLogo.png" alt="YouTube" width="60%"></a></ul>
     </div>
     </div>
     <div class="rightcolumn">
