fixed-facebook-link

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <div class="body">
       <h2>Socials</h2>
     </div>
-      <ul><a href="https://www.facebook.com/">img src="images/facebookLogo.png" alt="Facebook" width="20%"></a></ul>
+      <ul><a href="https://www.facebook.com/"><img src="images/facebookLogo.png" alt="Facebook" width="20%"></a></ul>
       <ul><a href="https://www.linkedin.com/"><img src="images/linkedInLogo.png" alt="LinkedIn" width="20%"></a></ul>
       <ul><a href="https://www.instagram.com/"><img src="images/instagramLogo.png" alt="Instagram" width="20%"></a></ul>
       <ul><a href="https://twitter.com/"><img src="images/twitterLogo.png" alt="Twitter" width="20%"></a></ul>
