adding heading for social links

--- a/announce.html
+++ b/announce.html
@@ -22,6 +22,7 @@
     </ul>
   </div>
   <div class="social1">
+    <h3>Socials</h3>
     <div id="social">
       <ul>
         <li><img src="images/youtube1.png" alt="Youtube"></li>
